Starting `learn` example